--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "slackbot"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "slack-bot": "^1.1.5"
+  }
 }
