--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Slack bot for junyi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel-node index.js"
   },
   "keywords": [
     "slackbot"
@@ -12,6 +13,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "slack-bot": "^1.1.5"
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "slackbots": "^0.5.2"
   }
 }
